@@ -36,3 +36,5 @@
 	* Incremented the package version to 1.1.0.
 2024-11-01 Fred Gleason <fredg@paravelsystems.com>
 	* Added an overloaded 'Profile::loadDirectory()' method.
+2024-11-01 Fred Gleason <fredg@paravelsystems.com>
+	* Incremented the package version to 1.2.0.
